# IRGen

./: BWCLS.cpp  BWCLS.h  CMakeLists.txt  IR-lg-ac-demo.cpp  IR-panasonic-ac-demo.cpp  IRGen.cpp  IRGen.h  Makefile  README.md
